Update service link in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         
         <div class="services-grid">
             <!-- UG 16H -->
-            <a href="https://3uvad73jcivve.ok.kimi.link" class="service-card">
+            <a href="https://ping-monitor--manikohi2817.replit.app" class="service-card">
                 <div class="service-icon">⏱️</div>
                 <div class="service-name">UG 16 Giờ</div>
                 <div class="service-desc">Theo dõi UGPhone 16h</div>
